--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,4 +7,8 @@
     "source.fixAll": "explicit",
     "source.organizeImports": "explicit"
   },
+  "isort.args": [
+    "--profile",
+    "black"
+  ]
 }
